[gd_scene load_steps=19 format=2]

[ext_resource path="res://player.gd" type="Script" id=1]
[ext_resource path="res://resource/user/user_ship/fire_ship2.png" type="Texture" id=2]
[ext_resource path="res://resource/user/user_ship/variation_speed1.png" type="Texture" id=3]
[ext_resource path="res://resource/user/user_ship/backward_desplacement.png" type="Texture" id=4]
[ext_resource path="res://resource/user/user_ship/ship_fire_left_side.png" type="Texture" id=5]
[ext_resource path="res://resource/user/user_ship/ship_fire_right_side.png" type="Texture" id=6]
[ext_resource path="res://resource/user/user_ship/fire_ship0.png" type="Texture" id=7]
[ext_resource path="res://bullet.tscn" type="PackedScene" id=8]
[ext_resource path="res://explotion_sprite.tscn" type="PackedScene" id=9]
[ext_resource path="res://explotion.tscn" type="PackedScene" id=10]
[ext_resource path="res://ship_collision_animation.tscn" type="PackedScene" id=11]
[ext_resource path="res://ship_collision.tscn" type="PackedScene" id=12]
[ext_resource path="res://direction_collision.tscn" type="PackedScene" id=13]
[ext_resource path="res://life_tag.tscn" type="PackedScene" id=14]
[ext_resource path="res://radar.tscn" type="PackedScene" id=15]
[ext_resource path="res://head_east.tscn" type="PackedScene" id=18]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "desplace_left",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ) ],
"loop": true,
"name": "desplace_right",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ), ExtResource( 3 ) ],
"loop": true,
"name": "speed1",
"speed": 100.0
}, {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "speed3",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "step_back",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 21.0

[node name="player" type="Area2D"]
collision_mask = 62
script = ExtResource( 1 )
Bullet = ExtResource( 8 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.181, 0.14 )
frames = SubResource( 1 )
animation = "speed1"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 2, -4 )
rotation = 1.5708
shape = SubResource( 2 )

[node name="explotion_animation" parent="." instance=ExtResource( 10 )]

[node name="explotion" parent="." instance=ExtResource( 9 )]

[node name="ship_collision" parent="." instance=ExtResource( 12 )]
frame = 0

[node name="ship_collision_animation" parent="." instance=ExtResource( 11 )]

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( -43, 1 )
scale = Vector2( 0.181, 0.14 )
current = true
zoom = Vector2( 0.8, 0.7 )
smoothing_enabled = true

[node name="direction_collision" parent="." instance=ExtResource( 13 )]

[node name="head" parent="." instance=ExtResource( 18 )]
position = Vector2( 43, 0 )

[node name="life_tag" parent="." instance=ExtResource( 14 )]
position = Vector2( -28, -32 )

[node name="radar" parent="." instance=ExtResource( 15 )]
collision_mask = 6

[node name="shot_eye" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 500 )
collision_mask = 4126

[node name="target_detection" type="Timer" parent="."]
autostart = true

[connection signal="area_entered" from="." to="." method="_on_player_area_entered"]
[connection signal="animation_finished" from="explotion_animation" to="." method="_on_explotion_animation_animation_finished"]
[connection signal="animation_finished" from="ship_collision_animation" to="." method="_on_ship_collision_animation_animation_finished"]
[connection signal="restart_position" from="direction_collision" to="." method="_on_direction_collision_restart_position"]
[connection signal="area_entered" from="radar" to="." method="_on_radar_area_entered"]
[connection signal="area_exited" from="radar" to="." method="_on_radar_area_exited"]
[connection signal="timeout" from="target_detection" to="." method="_on_target_detection_timeout"]
